--- a/login/login.html
+++ b/login/login.html
@@ -37,7 +37,7 @@
       outline: none;
       box-shadow: none;
     }
-    #emailInput::placeholder {
+    #usernameInput::placeholder {
       font-size: 0.85rem;
     }
     .next-btn, .sign-btn {
@@ -48,7 +48,7 @@
       font-weight: bold;
       background-color: #7b4d11;
     }
-    .next-btn::focus, .sign-btn::focus {
+    .next-btn:focus, .sign-btn:focus {
       background-color: #7b4d11;
     }
     .next-btn:hover, .sign-btn:hover {
@@ -84,6 +84,29 @@
     .link-small {
       font-size: 0.9rem;
     }
+    .error-message {
+      font-size: 0.8rem;
+      color: red;
+    }
+    /* Centered Alerts */
+    .alert-container {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+    .alert {
+      margin-bottom: 10px;
+      border-radius: 0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .alert-success, .alert-warning, .alert-danger, .alert-dark {
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
@@ -95,7 +118,7 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Sign up form -->
+  <!-- Sign in form -->
   <div class="card shadow-lg p-4">
     <div class="card-body">
       <div class="d-flex align-items-center justify-content-center mb-4">
@@ -103,14 +126,18 @@
       </div>
       <h6 class="card-title mb-4">Sign In</h6>
 
-      <div id="emailError" class="text-danger mb-2 d-none" style="font-size: 0.9rem;">
-        Username does not exist
+      <div id="usernameError" class="text-danger mb-2 d-none" style="font-size: 0.9rem;">
+        Please enter a valid username
       </div>
-      <div id="step-email">
+      <div id="step-username">
         <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Enter a username" required>
+        <div id="usernameFeedback" class="error-message d-none"></div>
 
         <div class="d-flex justify-content-end mt-4">
           <button class="btn next-btn px-5" id="nextBtn">Next</button>
+        </div>
+        <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
+          <p>New to FLIPS? <a href="register.html">Create an account</a></p>
         </div>
       </div>
 
@@ -123,9 +150,10 @@
       <div id="step-password" class="d-none">
         <!-- Back arrow -->
         <div class="backBtn" id="backBtn">
-            <i class="bi bi-arrow-left-circle"></i> <span id="backEmail"></span>
+            <i class="bi bi-arrow-left-circle"></i> <span id="backUsername"></span>
         </div>
         <input type="password" class="form-control form-control-underline mb-3" id="passwordInput" placeholder="Enter password" required>
+        <div id="passwordFeedback" class="error-message d-none"></div>
         <div class="d-flex justify-content-end">
           <button class="btn sign-btn px-4">Sign In</button>
         </div>
@@ -137,36 +165,28 @@
     </div>
   </div>
 
-  <!-- Toast: Success -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="successToast">
-    <div class="toast-header bg-success text-white">
-      <strong class="me-auto">Login Successful</strong>
+  <!-- Alert Container for Centered Notifications -->
+  <div class="alert-container" id="alertContainer">
+    <!-- Success Alert -->
+    <div class="alert alert-success alert-dismissible fade d-none" id="successAlert" role="alert">
+      <strong>Login Successful!</strong> Welcome back!
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">Welcome back!</div>
-  </div>
-
-  <!-- Toast: Wrong credentials -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="wrongCredentialsToast">
-    <div class="toast-header bg-warning text-dark">
-      <strong class="me-auto">Invalid Credentials</strong>
+    <!-- Wrong Credentials Alert -->
+    <div class="alert alert-warning alert-dismissible fade d-none" id="wrongCredentialsAlert" role="alert">
+      <strong>Invalid Credentials!</strong> Please check your username and password.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">Please check your username and password.</div>
-  </div>
-
-  <!-- Toast: User not found -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="userNotFoundToast">
-    <div class="toast-header bg-danger text-white">
-      <strong class="me-auto">User Not Found</strong>
+    <!-- User Not Found Alert -->
+    <div class="alert alert-danger alert-dismissible fade d-none" id="userNotFoundAlert" role="alert">
+      <strong>User Not Found!</strong> We couldn't find your account.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">We couldn't find your account.</div>
-  </div>
-
-  <!-- Toast: Server error -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="serverErrorToast">
-    <div class="toast-header bg-dark text-white">
-      <strong class="me-auto">Server Error</strong>
+    <!-- Server Error Alert -->
+    <div class="alert alert-dark alert-dismissible fade d-none" id="serverErrorAlert" role="alert">
+      <strong>Server Error!</strong> Something went wrong. Please try again later.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">Something went wrong. Please try again later.</div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -174,80 +194,147 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
     const BASE_URL = 'https://api.flipsintel.org';
-  
+
+    // Debounce function
+    function debounce(func, wait) {
+      let timeout;
+      return function (...args) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => func.apply(this, args), wait);
+      };
+    }
+
+    // Validation functions
+    function validateUsername(username) {
+      return username.length >= 3;
+    }
+
+    function validatePassword(password) {
+      const errors = [];
+      if (password.length < 8) errors.push("Password must be at least 8 characters long.");
+      return errors;
+    }
+
+    // Real-time validation with debouncing
     const usernameInput = document.getElementById('usernameInput');
-    const emailError = document.getElementById('emailError');
+    usernameInput.addEventListener('input', debounce(function () {
+      const username = this.value.trim();
+      const feedback = document.getElementById('usernameFeedback');
+      feedback.classList.add('d-none');
+      if (username && !validateUsername(username)) {
+        feedback.textContent = 'Username must be at least 3 characters long';
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
     const passwordInput = document.getElementById('passwordInput');
-    const signInBtn = document.querySelector('.sign-btn');
-  
+    passwordInput.addEventListener('input', debounce(function () {
+      const password = this.value;
+      const feedback = document.getElementById('passwordFeedback');
+      feedback.classList.add('d-none');
+      const errors = validatePassword(password);
+      if (errors.length > 0) {
+        feedback.textContent = errors.join(' ');
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
+    // Show alert
+    function showAlert(alertId) {
+      const alerts = ['successAlert', 'wrongCredentialsAlert', 'userNotFoundAlert', 'serverErrorAlert'];
+      alerts.forEach(id => {
+        const alert = document.getElementById(id);
+        alert.classList.add('d-none');
+        alert.classList.remove('show');
+      });
+
+      const targetAlert = document.getElementById(alertId);
+      targetAlert.classList.remove('d-none');
+      targetAlert.classList.add('show');
+      // Auto-dismiss after 5 seconds
+      setTimeout(() => {
+        targetAlert.classList.remove('show');
+        setTimeout(() => targetAlert.classList.add('d-none'), 150);
+      }, 5000);
+    }
+
     // Step 1: Handle username "Next"
     document.getElementById('nextBtn').addEventListener('click', function () {
       const username = usernameInput.value.trim();
-  
-      if (!username) {
-        emailError.textContent = 'Please enter your username.';
-        emailError.classList.remove('d-none');
+
+      if (!username || !validateUsername(username)) {
+        document.getElementById('usernameError').textContent = 'Please enter a valid username (at least 3 characters)';
+        document.getElementById('usernameError').classList.remove('d-none');
         return;
       }
-  
-      emailError.classList.add('d-none');
-      document.getElementById('step-email').classList.add('d-none');
-      document.getElementById('loading').classList.remove('d-none');
-  
-      // Simulate checking username (replace with real API check if needed)
+
+      document.getElementById('usernameError').classList.add('d-none');
+      this.disabled = true;
+      this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...';
+
       setTimeout(() => {
-        document.getElementById('loading').classList.add('d-none');
-        document.getElementById('step-password').classList.remove('d-none');
-        document.getElementById('backEmail').textContent = username;
-      }, 1000);
+        document.getElementById('backUsername').textContent = username;
+        document.getElementById('step-username').classList.add('d-none');
+        document.getElementById('loading').classList.remove('d-none');
+        this.disabled = false;
+        this.innerHTML = 'Next';
+
+        setTimeout(() => {
+          document.getElementById('loading').classList.add('d-none');
+          document.getElementById('step-password').classList.remove('d-none');
+        }, 1000);
+      }, 500); // Simulate slight delay for loader visibility
     });
-  
+
     usernameInput.addEventListener('input', function () {
       if (usernameInput.value.trim()) {
-        emailError.classList.add('d-none');
+        document.getElementById('usernameError').classList.add('d-none');
       }
     });
-  
+
     document.getElementById('backBtn').addEventListener('click', function () {
       document.getElementById('step-password').classList.add('d-none');
-      document.getElementById('step-email').classList.remove('d-none');
+      document.getElementById('step-username').classList.remove('d-none');
     });
-  
+
     // Step 2: Handle login submission
-    signInBtn.addEventListener('click', function () {
+    document.querySelector('.sign-btn').addEventListener('click', function () {
       const username = usernameInput.value.trim();
       const password = passwordInput.value;
-  
-      if (!password) {
-        alert("Please enter your password.");
+
+      // Validate inputs
+      if (!username || !validateUsername(username)) {
+        showAlert('userNotFoundAlert');
         return;
       }
-  
+      if (!password || validatePassword(password).length > 0) {
+        showAlert('wrongCredentialsAlert');
+        return;
+      }
+
       const data = { username, password };
-      
-      // Log the data being posted
+
+      // Log the data being posted (redacting sensitive information)
       console.log('Login attempt with data:', {
         username: data.username,
-        password: '[REDACTED]' // Avoid logging sensitive information like passwords
+        password: '[REDACTED]'
       });
-  
-      signInBtn.disabled = true;
-      signInBtn.innerHTML = 'Signing In...';
-  
+
+      this.disabled = true;
+      this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Signing In...';
+
       axios.post(`${BASE_URL}/login/`, data)
         .then(function (response) {
-          // Log successful response
           console.log('Login successful:', {
             token: response.data.token
           });
           localStorage.setItem("token", response.data.token);
-          showToast('success');
+          showAlert('successAlert');
           setTimeout(() => {
             window.location.href = "../dashboard/index.html";
           }, 2000);
         })
         .catch(function (error) {
-          // Log error details
           if (error.response) {
             console.error('Login failed:', {
               status: error.response.status,
@@ -257,37 +344,25 @@
             switch (error.response.status) {
               case 400:
               case 401:
-                showToast('wrongCredentials');
+                showAlert('wrongCredentialsAlert');
                 break;
               case 404:
-                showToast('userNotFound');
+                showAlert('userNotFoundAlert');
                 break;
               default:
-                showToast('serverError');
+                showAlert('serverErrorAlert');
                 break;
             }
           } else {
             console.error('Login failed: Network or server error', error.message);
-            showToast('serverError');
+            showAlert('serverErrorAlert');
           }
         })
         .finally(() => {
-          signInBtn.disabled = false;
-          signInBtn.innerHTML = 'Sign In';
+          this.disabled = false;
+          this.innerHTML = 'Sign In';
         });
     });
-  
-    function showToast(type) {
-      const id = {
-        success: "successToast",
-        wrongCredentials: "wrongCredentialsToast",
-        userNotFound: "userNotFoundToast",
-        serverError: "serverErrorToast"
-      }[type];
-  
-      $('.toast').toast('hide');
-      $(`#${id}`).toast('show');
-    }
   </script>
 </body>
 </html>
